syntax = "proto3";

package product;
option go_package = "api/pb";

  message ProductQueryRequest{
  string ID = 1;
}
message Product{
  string ID = 1;
  string Name = 2;
  int32 Price = 3;
}
message ProductResponse { Product product = 1; }
message AllProductQueryRequest{}



message ProductListResponse { repeated Product products = 1; }

service ProductService {
  rpc AddProduct(Product) returns (ProductResponse);
  rpc FindProductByID (ProductQueryRequest) returns (ProductResponse);
  rpc GetAllProducts (AllProductQueryRequest) returns (ProductListResponse);
}